fix: remove slider indicators z-index

--- a/src/style/sections/_cnt.scss
+++ b/src/style/sections/_cnt.scss
@@ -35,6 +35,7 @@
 	.carousel-indicators {
 		margin-top: 30px;
 		position: relative;
+		z-index: 0;
 
 		li {
 			background: #e8e8e8;
